--- a/FrontEnd_Pedro_1/src/App.css
+++ b/FrontEnd_Pedro_1/src/App.css
@@ -43,7 +43,8 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  /*padding: 20px;
+  padding-top: 60px;*/
 }
 
 .app-header {
