--- a/FrontEnd_Pedro_1/src/components/Column.css
+++ b/FrontEnd_Pedro_1/src/components/Column.css
@@ -1,4 +1,4 @@
-.column {
+/*.column {
     background-color: white;
     border: 1px solid black;
     border-radius: 4px;
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+  }*/
   
   .add-task-button {
     background-color: #28a745;
@@ -20,6 +20,7 @@
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
   
   .delete-column {
@@ -30,4 +31,23 @@
     border-radius: 4px;
     cursor: pointer;
   }
+  
+  /* Column.css */
+.column {
+  background-color: #f4f4f4;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  width: 250px; /* Define a largura de cada coluna */
+}
+
+.column-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-grid {
+  margin-top: 10px;
+}
   
