--- a/FrontEnd_Pedro_1/src/components/Header.css
+++ b/FrontEnd_Pedro_1/src/components/Header.css
@@ -1,8 +1,11 @@
 .header {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     padding: 10px;
     background-color: #333;
+    width: 100%; /* Adicione essa linha */
+    box-sizing: border-box; /* Garante que o padding não afete a largura total */
+    position: fixed;
   }
   
   .search-bar {
