--- a/FrontEnd_Pedro_1/src/components/Column.css
+++ b/FrontEnd_Pedro_1/src/components/Column.css
@@ -16,6 +16,9 @@
     width:  25%; /* Define a largura de cada coluna */
     
   }
+  .column button:active, .column button:focus, .column input{
+    outline: 0;
+  }
   
   .column-header {
     padding-left: 8px;
@@ -31,7 +34,9 @@
     background-color: transparent;
     font-size: 40;
   }
+
   .add-task{
+    height: auto;
     display: flex;
     flex-direction: inline;
     justify-content: center;
@@ -39,14 +44,17 @@
     overflow: hidden ;
   }
   .add-task input{
-    height: 20px;
-    width: 220px;
-    font-size: 14px;
+    display: flex;
+    height: 100%;
+    width: 40%;
+    font-size: 100%;
     border-color: #28a745;
     border-width: 4px;
     border-radius: 4px 0 0 4px;
   }
   .add-task-button {
+    height: 100%;
+    width: 33%;
     background-color: #28a745;
     color: white;
     border: none;
