--- a/FrontEnd_Pedro_1/src/App.css
+++ b/FrontEnd_Pedro_1/src/App.css
@@ -1,5 +1,6 @@
 .container {
   max-width: 1800px;
+  min-height: 100vh;
   height: 100vh;
   margin: 0 auto;
   display: flex;
@@ -17,20 +18,42 @@
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 20px;
+  padding: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 200px ;
+  width: 50%;
+  max-width: 300px;
 }
 
 .app-footer {
   text-align: center;
+  position: relative; /* Mantém o footer fixo na parte inferior sem se mover */
   bottom: 0;
+  width: 100%;
+  padding: 10px 0;
 }
 
 .card-grid {
   display: flex;
   flex-wrap: wrap;
-  gap: 0px;
+  gap: 20px;
   padding-top: 10px;
   justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .card-grid {
+      flex-direction: column;
+      padding: 10px;
+  }
+
+  .app-footer {
+    margin-top: 150px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .card {
+      width: 45%;
+  }
+
 }
