--- a/FrontEnd_Pedro_1/src/components/Header.css
+++ b/FrontEnd_Pedro_1/src/components/Header.css
@@ -1,21 +1,23 @@
 .header {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    justify-content: center;
-    padding: 10px;
-    background-color: #333;
-    width: 100%; /* Adicione essa linha */
-    box-sizing: border-box; /* Garante que o padding não afete a largura total */
-    position: fixed;
-  }
-  
-  .search-bar {
-    background-color: #ececec;
-    height: 20px;
-    width: 320px;
-    padding: 5px;
-    border-radius: 4px;
-    border: none;
-  }
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+  padding: 10px;
+  background-color: #333;
+  width: 100%; /* Alterei essa linha */
+  flex-wrap: wrap;  /* Adicione essa linha */
+  box-sizing: border-box; /* Garante que o padding não afete a largura total */
+  position: fixed;
+  z-index: 1000;
+}
+
+.search-bar {
+  background-color: #ececec;
+  height: 20px;
+  width: 320px;
+  padding: 5px;
+  border-radius: 4px;
+  border: none;
+}
   
