--- a/FrontEnd_Pedro_1/src/components/card/card.css
+++ b/FrontEnd_Pedro_1/src/components/card/card.css
@@ -1,4 +1,3 @@
-/* src/components/card/card.css */
 .card {
   align-self: center;
   width: 95%;
@@ -10,7 +9,7 @@
   padding: 8px;
   padding-bottom: 0;
   border-radius: 4px;
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
   position: relative;
   text-overflow: ellipsis;
   white-space: nowrap;
